--- a/Styles/Note.css
+++ b/Styles/Note.css
@@ -1,7 +1,7 @@
 :root {
   --primary-color: #6366f1; /* Indigo */
   --secondary-color: #f43f5e; /* Rose */
-  /* --primary-color: #7DA56C; 
+  /* --primary-color: #7DA56C;
   --secondary-color: #e9b003;  */
   --bg-light: #f9fafb;
   --text-color: #1f2937;
@@ -17,7 +17,7 @@
 {
   height: 530px auto;
   background-color: #ffffff;
-  padding: 0;
+  padding:2rem 3rem;
 }
 
 input[type="text"] {
@@ -43,9 +43,9 @@ input[type="text"]:focus {
 }
 
 button[type="submit"]:hover {
-  background-color:var(--hoverbg); 
+  background-color:var(--hoverbg);
   transform: translateY(-2px);
-  
+
 }
 
 .Note_box {
@@ -96,6 +96,56 @@ button[type="submit"]:hover {
   resize: none;
   color: #ffffff;
 }
+/*................................................ */
+ .notes-section {
+
+  margin: 60px auto;
+  background-color: #fefefe;
+  padding:2rem 3rem;
+  border-radius: 12px;
+  box-shadow: 0 12px 30px rgba(0, 0, 0, 0.08);
+  font-family: 'Segoe UI', sans-serif;
+}
+
+.notes-section h2 {
+  font-size: 30px;
+  color: #000000;
+  margin-bottom: 20px;
+  text-align: left;
+}
+
+.notes-section p {
+  font-size: 16px;
+  color: #444;
+  line-height: 1.7;
+}
+
+.notes-highlights {
+  list-style: none;
+  padding: 0;
+  margin: 25px 0;
+}
+
+.notes-highlights li {
+  margin-bottom: 14px;
+  position: relative;
+  font-size: 15px;
+}
+
+.explore-notes-btn {
+  display: inline-block;
+  background:#6366f1;
+  color: #fff;
+  padding: 12px 24px;
+  text-decoration: none;
+  border-radius: 8px;
+  font-size: 15px;
+  margin-top: 15px;
+}
+.explore-notes-btn:hover {
+  background:var(--hoverbg);
+}
+/* ........................................................................... */
 
 .Note_footer {
   display: flex;
@@ -103,7 +153,7 @@ button[type="submit"]:hover {
   margin-top: 15px;
   font-size:2rem;
 
-  
+
 }.Note_footer a
 {
   color: rgb(3, 0, 0);
@@ -130,14 +180,18 @@ button[type="submit"]:hover {
 #span {
 
   margin-right: 20px;
- 
+
+}#NotesContent
+{
+
+  padding:2rem 1rem;
 }
 
 
 #Note_content {
   width: 100%;
   height: 120px;
-  padding: 12px;
+  padding:2rem 1rem;
   font-size:1.2rem;
   font-family: var(--font-main);
   border: none;
@@ -145,13 +199,41 @@ button[type="submit"]:hover {
   margin-top:5px;
   resize: none;
   color: #000103;
+
 }
 button[type="submit"]
 {
   height:52px;
   margin-top: 20px;
- 
+
+} .notes-section {
+  padding:2rem 1rem;
+
+}.notes-section h2 {
+  font-size: 20px;
+
 }
+
+.notes-section p {
+  font-size: 16px;
+  color: #444;
+  line-height: 1.7;
+}
+
+.notes-highlights {
+  list-style: none;
+  padding: 0;
+  margin: 25px 0;
+}
+
+.notes-highlights li {
+  margin-bottom: 14px;
+  position: relative;
+  font-size: 15px;
+}
+
+
+
 .Note_footer {
 
   margin-top: 15px;
