--- a/Styles/Note.css
+++ b/Styles/Note.css
@@ -7,9 +7,10 @@
   --text-color: #1f2937;
   --card-bg: #f3eded;
   --shadow: 0 10px 25px rgba(0, 0, 0, 0.05);
-  --radius: 12px;
+  --radius: 0px;
   --font-main: 'Poppins', sans-serif;
   --hoverbg :#555;
+   --border:2px dotted white;
 }
 
 /*  Notes  section ------------------------------------------------------------------------------------------------------------- */
@@ -18,6 +19,7 @@
   height: 530px auto;
   background-color: #ffffff;
   padding:2rem 3rem;
+
 }
 
 input[type="text"] {
@@ -37,7 +39,7 @@ input[type="text"]:focus {
   height:52px;
   width: 100px;
   font-size: 20px;
-  border-radius: var(--radius);
+  border-radius:14px;
   outline: none;
   border: none;
 }
@@ -55,6 +57,7 @@ button[type="submit"]:hover {
   margin-bottom: 30px;
   box-shadow: var(--shadow);
   transition: transform 0.2s;
+   border: var(--border);
 }
 
 .Note_box:hover {
@@ -77,6 +80,7 @@ button[type="submit"]:hover {
   font-size:2.2rem;
   cursor: pointer;
   transition: color 0.3s;
+
 }
 
 #span:hover {
@@ -139,8 +143,10 @@ button[type="submit"]:hover {
   padding: 12px 24px;
   text-decoration: none;
   border-radius: 8px;
+  border: var();
   font-size: 15px;
   margin-top: 15px;
+   border: var(--border);
 }
 .explore-notes-btn:hover {
   background:var(--hoverbg);
@@ -166,6 +172,8 @@ button[type="submit"]:hover {
   border-radius: var(--radius);
   text-decoration: none;
   background-color:var(--card-bg);
+  border-radius: 14px;
+  border: var(--border);
 }.Note_footer a:hover{
     background-color: var(--hoverbg);
 }
