--- a/Styles/webdev.css
+++ b/Styles/webdev.css
@@ -162,9 +162,9 @@ border-right: none;
 
     height:500px;
     width: 100%;
-    padding: auto;
-    position: relative;
     border-radius: var(--radius);
+    background-color: #edeaea;
+    border: var(--border);
 }
 .webdevprocess h2{
 padding: 3rem 2rem;
@@ -172,8 +172,8 @@ padding: 3rem 2rem;
 {
     color: white;
     height: 120px;
-    width: 120px;
-    margin:2px 33px;
+    width:12%;
+    margin:2px 1.14%;
     display: flex;
     float: left;
     text-align: center;
@@ -184,10 +184,13 @@ padding: 3rem 2rem;
     border: var(--border);
     border-right: 6px solid black;
     background-color: #f43f5e;
+    padding: 15PX;
 }.webdevprocess .processbox:nth-child(odd)
 {
     background-color: #6366f1;
-}.ourstatus
+}
+/* showing our clients ---------------------------------*/
+.ourstatus
 {
     height: 600px;
     width: 100%;
@@ -195,23 +198,22 @@ padding: 3rem 2rem;
     background-position: center;
     background-size: cover;
     border-radius: var(--radius);
+    border: var(--border);
     padding: 0;
 }.ourstatus .ourstatushero
 {
- background: linear-gradient(to top, var(--secondary-color),transparent);
+background: linear-gradient(to right,var(--primary-color),transparent);
 margin: 0;
 height:600px;
 width:100%;
 border-radius: var(--radius);
-border: var(--border);
 }.ourstatus h2{
 padding: 3rem 1rem ;
-
-color: white;
- border-radius: var(--radius);
+color: rgb(235, 235, 235);
+border-radius: var(--radius);
 width: 20%;
-font-size: 30px;
-padding:5% 10%;
+font-size: 35px;
+padding:5% 8%;
 height: 50%;
 }.client-slider
 {
@@ -220,8 +222,9 @@ height: 50%;
     position: absolute;
     margin:-200px 30%;
       touch-action: pan-y;
-   box-shadow: 2px 2px 1000px var(--secondary-color);
+   /* box-shadow: 2px 2px 1000px var(--secondary-color); */
       overflow: hidden;
+      /* background-color: white; */
 
 }
  .clients-images {
@@ -243,8 +246,79 @@ height: 50%;
         position: absolute;
         margin: 10% 40%;
     }
+.pricingplan
+{
+       background-color: #edeaea;
+    height: 600px;
+    width: 100%;
+    display: block;
+    margin-top:8%;
+    border: var(--border);
+}.plancategory
+{
+    background-color: #ffffff;
+    height: 500px;
+    width: 30%;
+    display:flex;
+    flex-wrap: wrap;
+    float: left;
+    margin: 25px 1.65%;
+    overflow: hidden;
+    justify-content: space-between;
+}.planheader
+{
+    top: 0;
+    width:100%;
+    height: 10%;
+     background: linear-gradient(to right, var(--secondary-color),var(--primary-color));
+     text-align: center;
+     align-items: center;
+     align-content: center;
+     color: white;
+     font-size: 22px;
+     display: inline-block;
+     position: relative;
 
 
+}.plancontent
+{
+   height:90%;
+    width:100%;
+     background-color: white;
+     padding: 0rem 3rem;
+
+
+}.plancontent li{
+    padding: 5px;
+    list-style: none;
+}.plancontent span
+{
+    background-color: #f2ecec;
+    color: #6366f1;
+}
+.doughtplanprice
+{
+    width: 100%;
+    height: 200px;
+    background-color: rgb(255, 255, 255);
+    padding: 3rem 2rem;
+    font-size: 20px;
+    text-align: center;
+}.doughtplanprice button
+{
+    font-size: 25px;
+    padding: 15px;
+    background-color: #6366f1;
+    color: white;
+    border: var(--border);
+    outline: none;
+    /* transition: 1s; */
+}.doughtplanprice button:hover
+{
+background-color: var(--hoverbg);
+transform: scale(1.01);
+
+}
 
 /* mobile responsive ----------------------------------------------*/
 @media screen and (max-width:700px) {
@@ -334,7 +408,7 @@ border-right: none;
 {
     height:800px;
     width: 100%;
-    padding:3rem 2rem;
+    padding:3rem 1.5rem;
     background-color: var(--primary-color);
     border-radius: var(--radius);
     border: var(--border);
@@ -381,9 +455,7 @@ border-right: none;
     width: 80%;
     position: absolute;
     margin: -100px 7%;
-      touch-action: pan-y;
-   box-shadow: 2px 2px 1000px var(--secondary-color);
-      overflow: hidden;
+    overflow: hidden;
 
 }
  .clients-images {
@@ -408,7 +480,37 @@ border-right: none;
         width: 60%;
 
 
-    }
+    }.pricingplan
+{
+    height:1800px;
+    padding: 0;
+
+}.plancategory
+{
+    background-color: #ffffff;
+    height: 550px;
+    width: 100%;
+    display:block;
+    flex-wrap: nowrap;
+    overflow: hidden;
+    justify-content:none;
+    margin: 25px 0;
+}.planheader
+{
+
+     font-size:18px;
+
+
+
+}.plancontent
+{
+     padding: 2rem 2rem;
+
+
+}.plancontent li{
+    padding: 2px ;
+    list-style: none;
+}
 }
 
 
@@ -470,8 +572,8 @@ backdrop-filter: blur(15px);
 {
     color: white;
     height: 110px;
-    width: 110px;
-    margin:2px 8px;
+    width:30%;
+    margin:5px 1.66%;
     display: flex;
     float: left;
     text-align: center;
@@ -506,7 +608,27 @@ backdrop-filter: blur(15px);
         width: 60%;
 
 
-    }
+    }.planheader
+{
+
+     font-size: 15px;
+}.plancontent
+{
+   height:90%;
+    width:100%;
+     background-color: white;
+     padding: 0rem 1rem;
+
+
+}.plancontent li{
+    padding: 2px;
+    font-size: 14px;
+    list-style: none;
+}
+.plancontent span{
+    font-size: 12px;
+    padding: 0;
+}
 }
 
 
